# corpus-cleaner-cli

./: Cargo.toml  README.md
src/: main.rs  processor.rs
src/filters/: mod.rs
