[package]
name = "corpus-cleaner-cli"
version = "0.1.0"
edition = "2021"
authors = ["Yurei AI <dev@yureiai.xyz>"]
description = "High-performance Solana transaction log sanitizer and refinery."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
indicatif = "0.17"
anyhow = "1.0"
dashmap = "6.0"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
opt-level = 3
